--- a/templates/default/tpl.requests_overview_row.html
+++ b/templates/default/tpl.requests_overview_row.html
@@ -1,5 +1,8 @@
 <tr class="{CSS_ROW}">
 	<td class="std small">
+		{VAL_EXT_ID}
+	</td>
+	<td class="std small">
 		{VAL_TITLE}
 	</td>
 	<td class="std small">
@@ -10,6 +13,9 @@
 	</td>
 	<td class="std small">
 		{VAL_CREATE_DATE}
+	</td>
+	<td class="std small">
+		{VAL_LAST_UPDATE}
 	</td>
 	<td class="std small">
 		{VAL_STATUS}
