Support for ILIAS 5

--- a/templates/default/tpl.requests_overview_row.html
+++ b/templates/default/tpl.requests_overview_row.html
@@ -23,12 +23,14 @@
 	<td class="std small">
 		{VAL_REQUESTER_EMAIL}
 	</td>
+	<!-- BEGIN lib -->
 	<td class="std small">
 		{VAL_LIBRARY}
 	</td>
 	<td class="std small">
 		{VAL_LIBRARIAN}
 	</td>
+	<!-- END lib -->
 	<td class="std small">
 		{VAL_ACTION}
 	</td>
