Active/Inactive Libraries

--- a/templates/default/tpl.lib_overview_row.html
+++ b/templates/default/tpl.lib_overview_row.html
@@ -1,5 +1,8 @@
 <tr class="{CSS_ROW}" style="{STYLE}">
 	<td class="std small">
+		{VAL_ACTIVE}
+	</td>
+	<td class="std small">
 		{VAL_TITLE}
 	</td>
 	<td class="std small">
