removed status copy usages, added language variables, added interface directory to composer json, gui and model class edits

--- a/templates/default/tpl.requests_overview_row.html
+++ b/templates/default/tpl.requests_overview_row.html
@@ -30,6 +30,9 @@
 	<td class="std small">
 		{VAL_LIBRARIAN}
 	</td>
+	<td class="std small">
+		{VAL_NUMBER_OF_USAGES}
+	</td>
 	<!-- END lib -->
 	<td class="std small">
 		{VAL_ACTION}
